# leasing-voice-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  brief.md  leasing_voice_assistant.db  pyproject.toml  sip-participant.example.json  test.ulaw
data/kb/: cedar-park-townhomes.md  general-leasing-faq.md  lakeview-flats.md
data/knowledge/: general_faq.md
data/migrations/: 0001_property_prospect_schema.sql
data/seeds/: properties.json
docs/decisions/: 0001-repository-and-quality-tooling-foundation.md  0002-configuration-and-provider-interfaces.md  0003-property-prospect-persistence-and-seed-data.md  0004-database-query-tools.md  0005-knowledge-base-ingestion-and-retrieval.md  0006-property-resolution-state.md  0007-grounded-answer-orchestration.md  0008-safe-prospect-capture.md  0009-text-based-conversation-harness.md  0010-voice-pipeline.md  0011-real-call-twilio-integration.md  0012-streaming-stt-turn-detection-for-twilio.md  0013-deepgram-text-to-speech-for-twilio-playback.md  README.md
docs/project/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  SESSION_RUNBOOK.md  STATUS.md  TEST_CONVERSATION_SCENARIOS.md  (+3 more)
tests/: conftest.py  test_agent_grounding.py  test_agent_prompts.py  test_agent_resolution.py  test_agent_tools.py  test_agent_voice.py  test_answer_orchestration.py  test_app.py  test_config.py  test_conversation_session.py  test_database_tools.py  test_fakes.py  test_health.py  test_knowledge_base.py  test_knowledge_retrieval.py  test_persistence.py  test_property_resolution.py  test_prospect_capture.py  test_provider_adapters.py  test_provider_factory.py  test_repositories.py  test_seed_script.py  test_twilio_transport.py  test_voice_pipeline.py  test_worker_acknowledgments.py  test_worker_agent.py  test_worker_call_context.py  test_worker_configuration.py  test_worker_import.py  test_worker_metrics.py  test_worker_metrics_report.py  test_worker_prompts.py  test_worker_session_logging.py  test_worker_test_call.py  test_worker_tools.py  test_worker_turn_coordination.py
(+81 files in other folders)
